--- a/.github/workflows/djangoCi.yml
+++ b/.github/workflows/djangoCi.yml
@@ -20,8 +20,10 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd chat-app-backend
           pip install -r requirements.txt
 
       - name: Run Django tests
         run: |
+          cd chat-app-backend
           python manage.py test
